[build-system]
requires = ["setuptools == 69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sababagram"
version = "0.0.1"
description = "Telegram BotAPI framework"
authors = [
    {name = "Cub11k"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.9"
keywords = [
    "telegram",
    "bot",
    "api",
    "botapi"
]
classifiers = [
  "Development Status :: 1 - Planning",

  "Intended Audience :: Developers",
  "Environment :: Console",
  "License :: OSI Approved :: Apache Software License",

  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx",
    "adaptix"
]

[project.urls]
homepage = "https://github.com/sababagram/sababagram"
repository = "https://github.com/sababagram/sababagram"
issues = "https://github.com/sababagram/sababagram/issues"

[tool.setuptools]
packages = ["sababagram"]

[tool.ruff]
line-length = 100
